# agent-skills

./: README.md
datacube-ingestion/: SKILL.md
datacube-ingestion/formats/: UNSUPPORTED-FILE-FORMAT.md
eval/: .gitattributes  PLAN.md  README.md  pyproject.toml
eval/fixtures/: era5-happy.yaml  smoke.yaml
eval/icechunk_eval/: __main__.py  harness.py  jsonl_store.py  meta.py  persona.py  redactor.py  run_id.py  sdk_loop.py
eval/personas/: climate-scientist.md  minimal.md
eval/tests/: test_fixtures.py  test_jsonl_store.py  test_meta.py  test_outcome.py  test_persona.py  test_redactor.py  test_run_id.py
icechunk-datacube-ingestion/: COLLECT-DATACUBE-INGESTION-REQUIREMENTS.md  SKILL.md
icechunk-datacube-ingestion/formats/: GRIB.md  HDF5.md  TIFF.md  ZARR.md
