[project]
name = "icechunk-eval"
version = "0.0.1"
description = "Evaluation harness for the icechunk-datacube-ingestion agent skill"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "claude-agent-sdk>=0.1.81",
    "anthropic>=0.40",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["icechunk_eval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
